# youtube-playlist-music-downloader

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/example_package_vs/: main.py
src/yt_music_down/: __about__.py  __init__.py
