[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-music-down"
dynamic = ["version"]
description = 'A tool to download music playlists from youtube'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "vidyasagar0405", email = "vidyasagar0405@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["rich", "pytubefix"]

[project.urls]
Documentation = "https://github.com/vidyasagar0405/yt-music-down#readme"
Issues = "https://github.com/vidyasagar0405/yt-music-down/issues"
Source = "https://github.com/vidyasagar0405/yt-music-down"

[tool.hatch.version]
path = "src/yt_music_down/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/yt_music_down tests}"

[tool.coverage.run]
source_pkgs = ["yt_music_down", "tests"]
branch = true
parallel = true
omit = [
  "src/yt_music_down/__about__.py",
]

[tool.coverage.paths]
yt_music_down = ["src/yt_music_down", "*/yt-music-down/src/yt_music_down"]
tests = ["tests", "*/yt-music-down/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
yt-music-down = "yt_music_down.main:main"
